src/tests/unit/error/Cluster.xcpp
// This is -*- c++ -*- nearly C++23 with Modules TS but in the S.C.O.L.D. stylings that are so popular these days.
// Copyright Yahoo Inc. 2022.
// Licensed under the terms of the Apache-2.0 license.
// For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
// For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
#divert <fpp>
#import tests.unit.error.Cluster.template
#import tests.unit.error.Cluster.TUNITAS
// NOT YET ---> #import tests.unit.error.Cluster.APPLICATION
// NOT YET ---> #import tests.unit.error.Cluster.SERVER
#endiv
